--- a/mesin-produk-details.html
+++ b/mesin-produk-details.html
@@ -37,7 +37,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="/index.html"><i class="bi bi-house-fill navicon"></i><span>Beranda</span></a></li>
+        <li><a href="/index.html"><i class="bi bi-arrow-left-circle-fill"></i><span>Kembali</span></a></li>
         <!-- <li><a href="#portfolio-details"><i class="bi bi-images navicon"></i><span>Mesin Detail</span></a></li> -->
       </ul>
     </nav>
@@ -142,37 +142,6 @@
                       <tr>
                         <td>- Mesin pengoperasian sederhana dan perawatan yang nyaman</td>
                       </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <div class="portfolio-info">
-                  <h3>Detail Mesin : </h3>
-                  <table class="table table-bordered">
-                    <tbody>
-                        <tr>
-                            <td>Kecepatan</td>
-                            <td>15 - 20 m/menit</td>
-                        </tr>
-                        <tr>
-                            <td>Diameter Paper Core</td>
-                            <td>25 - 100mm</td>
-                        </tr>
-                        <tr>
-                            <td>Ketebalan Paper Core</td>
-                            <td>2 - 30 Lapis</td>
-                        </tr>
-                        <tr>
-                            <td>Lebar Kertas Kraft</td>
-                            <td>50 - 70mm</td>
-                        </tr>
-                        <tr>
-                            <td>Jumlah Gram Kertas</td>
-                            <td>150 - 400 gram/meter</td>
-                        </tr>
-                        <tr>
-                            <td>Kekuatan</td>
-                            <td>4,5 kW 380 V 50Hz</td>
-                        </tr>
                     </tbody>
                   </table>
                 </div>
