--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             </form>
           </div> -->
           <div class="col-lg-8">
-            <form action="https://formspree.io/f/xovavbbr" class="php-email-form" method="POST">
+            <form action="https://formspree.io/f/xovavbbr/{form_id}" class="php-email-form" method="POST">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -588,6 +588,8 @@
                 <div class="col-md-12">
                   <textarea class="form-control" name="message" rows="6" placeholder="Your Message" required=""></textarea>
                 </div>
+
+                <div class="g-recaptcha" data-sitekey="6LfnsxgqAAAAACQIg3VZcbnb4OSI0EUSAD2pu1PA"></div>
 
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
