--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
                   <textarea class="form-control" name="message" rows="6" placeholder="Your Message" required=""></textarea>
                 </div>
 
+                <!-- Widget reCAPTCHA -->
                 <div class="g-recaptcha" data-sitekey="6LfnsxgqAAAAACQIg3VZcbnb4OSI0EUSAD2pu1PA"></div>
 
                 <div class="col-md-12 text-center">
@@ -593,7 +594,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit" value="submit">Send Message</button>
+                  <button type="submit">Send Message</button>
                 </div>
 
               </div>
