--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         <p>
           <span class="fw-bold" style="color: #aa7d51;">Bima Inti Kertas</span> juga mempunyai contoh produk yang diproduksi, seperti contoh yang ada dibawah:
         </p>
-      </div><!-- End Section Title -->
+      </div>
+      <!-- End Section Title -->
 
       <div class="container">
 
@@ -298,6 +299,89 @@
               </div>
             </div>
             <!-- End Portfolio Item -->
+          </div>
+
+        </div>
+
+      </div>
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Industri yang kami layani</h2>
+      </div>
+      <!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="200">
+          
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/label-industri.webp" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Label Industri</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/textile-industri.webp" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Textil Industri</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/packaging-industri.webp" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Packaging Industri</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/film-foil-industri.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Film and Foil Industri</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="200">
+          
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/printing-industri.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Printing Industri</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/adhesive-industri.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Adhesive Tape Industri</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/karpet-industri.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Karpet Industri</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card-serve">
+              <img src="assets/img/iron-steel-industri.jpg" class="img-fluid" alt="">
+              <div class="overlay">
+                <span class="text-center">Iron & Steel Industri</span>
+              </div>
+            </div>
           </div>
 
         </div>
