--- a/index.html
+++ b/index.html
@@ -655,19 +655,19 @@
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <input type="text" name="name" class="form-control" placeholder="Nama" required="">
                 </div>
                 
                 <div class="col-md-6">
-                  <input type="email" name="email" class="form-control" placeholder="Your Email" required="">
+                  <input type="email" name="email" class="form-control" placeholder="Email" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" name="subject" class="form-control" placeholder="Your Subject" required="">
+                  <input type="text" name="subject" class="form-control" placeholder="Subjek" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Your Message" required=""></textarea>
+                  <textarea class="form-control" name="message" rows="6" placeholder="Pesan Anda" required=""></textarea>
                 </div>
 
                 <!-- Widget reCAPTCHA -->
