--- a/mesin-produk-details.html
+++ b/mesin-produk-details.html
@@ -51,7 +51,7 @@
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Beranda</a></li>
             <li class="current">Mesin Detail</li>
           </ol>
         </nav>
