--- a/index.html
+++ b/index.html
@@ -61,19 +61,10 @@
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
-          <div class="col-lg-9">
-            <h2>BIMA INTI KERTAS</h2>
-            <p>
-              We 
-              <span class="typed" data-typed-items="Produce, Serve, Trusted">Produce</span>
-              <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
-            </p>
-            <!-- <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
-            </div> -->
-          </div>
+            <div class="col-lg-9">
+              <img src="assets/img/bik-images/Logo BIK - Final - Png.png" alt="" class="img-home">
+              <!-- <h2>BIMA INTI KERTAS</h2> -->
+            </div>
         </div>
       </div>
 
@@ -584,13 +575,13 @@
                 <h3>Address</h3>
                 <h6 class="fw-bold">Head Office:</h6>
                 <p><span class="fw-bold">Satrio Tower,</span> 9th Floor A, 
-                  Jl. Prof. Dr. Satrio Blok C4 Kuningan Setiabudi, Jakarta Selatan 12950
+                  Jl. Prof. Dr. Satrio Blok C4 Kuningan Setiabudi - Jakarta Selatan 12950
                 </p>
-                <h6 class="fw-bold">Warehouse:</h6>
+                <h6 class="fw-bold">Factory:</h6>
 				        <p>
                   <span class="fw-bold">Industrial Area,</span> 
                   Jl. Raya Narogong Km.26 No. 767 RT.003/RT.002, 
-                  Kel. Dayeuh, Kec. Cileungsi, Kab. Bogor, Jawa Barat 16820
+                  Kel. Dayeuh, Kec. Cileungsi, Kab. Bogor - Jawa Barat 16820
                 </p>
               </div>
             </div>
